--- a/ecard/Pages/Index.cshtml
+++ b/ecard/Pages/Index.cshtml
@@ -29,8 +29,10 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                
-                <img src="~/images/kitty10.jpg" alt="kitten" />
+
+
+                <div ></div>
+                <a href="https://en.wikipedia.org/wiki/Kitty" target="_blank"><img src="~/images/kitty15.jpg" alt="kitty3" /> </a>
                 <div class="carousel-caption">
                     <h3>Los Angeles</h3>
                     <p>LA is always so much fun!</p>
@@ -38,7 +40,8 @@
             </div>
 
             <div class="item">
-          <img src="~/images/kitty6.jpg" alt="kitty 2" />
+                <a href="https://www.youtube.com/watch?v=92vTUFqy3gU" target="_blank"><img src="~/images/kitty6.jpg" alt="kitty3" /> </a>
+               
                 <div class="carousel-caption">
                     <h3>Chicago</h3>
                     <p>Thank you, Chicago!</p>
@@ -46,12 +49,12 @@
             </div>
 
             <div class="item">
-                <img src="~/images/kitty5.jpeg" alt="kitty3"/>
-                <div class="carousel-caption">
-                    <h3>New York</h3>
-                    <p>We love the Big Apple!</p>
-                </div>
-            </div>
+                <a href="http://catyearschart.com/" target="_blank"><img src="~/images/kitty5.jpeg" alt="kitty3" /> </a>
+                    <div class="carousel-caption">
+                        <h3>New York</h3>
+                        <p>We love the Big Apple!</p>
+                    </div>
+</div>
         </div>
 
         <!-- Left and right controls -->
@@ -64,72 +67,6 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <a href="http://wowoco.org" target="_blank"> <img src="~/images/banner1.svg" alt="blue banner alternative text" title="click here" /></a>
-    <h1><strong> Lorem </strong></h1>
-
-    <h2>ipsum </h2>
-
-    <h3><strong> dolor</strong> </h3>
-
-    <a href="http://google.com" target="_blank ">sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a> <div></div>Ut enim ad minim veniam, quis nostrud exercitation ullamco <span>laboris</span> nisi ut aliquip ex ea commodo consequat.</div>
-
-
-    <ol>
-
-        <li>Duis</li>
-        <li>aute</li>
-        <li>irure</li>
-
-
-
-    </ol>
-
-    <ul>
-        <li>dolor</li>
-
-        <li>in</li>
-
-        <li> reprehenderit</li>
-    </ul>
-
-
-    <a href=" "></a>
-    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
 
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
