changed pics to quik added a div to center pics

--- a/ecard/Pages/Index.cshtml
+++ b/ecard/Pages/Index.cshtml
@@ -24,52 +24,78 @@
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+            <li data-target="#myCarousel" data-slide-to="4"></li>
         </ol>
 
         <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-            <div class="item active">
+
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <div style="text-align: center">
+                                <a href="https://en.wikipedia.org/wiki/Kitty" target="_blank"><img src="~/images/dj-quik-pic-1-1024x768.jpg" alt="kitty3" /></a>
+                                <div class="carousel-caption">
+                                    <h1>DJ Quik</h1>
+                                    <p>Happy Birthday! January 18th is a special day!</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <div style="text-align: center">
+                                <a href="https://www.youtube.com/watch?v=92vTUFqy3gU" target="_blank"><img src="~/images/Quik_Debarge.jpg" alt="kitty3" /> </a>
+                                <div class="carousel-caption">
+                                    <h2>Quik & Legendary Debarge</h2>
+                                    <p>Smile!</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <div style="text-align: center">
+                                <a href="http://catyearschart.com/" target="_blank"><img src="~/images/quiklive.jpg" alt="kitty3" /> </a>
+                                <div class="carousel-caption">
+                                    <h2>DJ Quik on the mic!</h2>
+                                    <p>Listen closely!</p>
+                                </div>
+                            </div>
+                        </div>
 
 
-                <div ></div>
-                <a href="https://en.wikipedia.org/wiki/Kitty" target="_blank"><img src="~/images/kitty15.jpg" alt="kitty3" /> </a>
-                <div class="carousel-caption">
-                    <h3>Los Angeles</h3>
-                    <p>LA is always so much fun!</p>
-                </div>
-            </div>
+                        <div class="item">
+                            <div style="text-align: center">
+                                <a href="https://en.wikipedia.org/wiki/Kitty" target="_blank"><img src="~/images/quikredT.jpg" alt="kitty3" /> </a>
+                                <div class="carousel-caption">
+                                    <h2>Bottles Up!</h2>
+                                    <p>Drink Up!</p>
+                                </div>
+                            </div>
+                        </div>
 
-            <div class="item">
-                <a href="https://www.youtube.com/watch?v=92vTUFqy3gU" target="_blank"><img src="~/images/kitty6.jpg" alt="kitty3" /> </a>
-               
-                <div class="carousel-caption">
-                    <h3>Chicago</h3>
-                    <p>Thank you, Chicago!</p>
-                </div>
-            </div>
+                        <div class="item">
+                            <div style="text-align: center">
+                                <a href="https://www.youtube.com/watch?v=92vTUFqy3gU" target="_blank"><img src="~/images/QuikwhiteT.JPG" alt="kitty3" /> </a>
+                                <div class="carousel-caption">
+                                    <h2>Quik is the name</h2>
+                                    <p>CRISPY WHITE T!</p>
+                                </div>
+                            </div>
+                        </div>
 
-            <div class="item">
-                <a href="http://catyearschart.com/" target="_blank"><img src="~/images/kitty5.jpeg" alt="kitty3" /> </a>
-                    <div class="carousel-caption">
-                        <h3>New York</h3>
-                        <p>We love the Big Apple!</p>
-                    </div>
-</div>
-        </div>
 
-        <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
+                                <!-- Left and right controls -->
+                                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                                    <span class="glyphicon glyphicon-chevron-left"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                                    <span class="glyphicon glyphicon-chevron-right"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
 
-    <script src="~/lib/jquery/dist/jquery.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+                    <script src="~/lib/jquery/dist/jquery.js"></script>
+                    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
 
 </body>
 
