-added data-interval to increase time on slides -changed background to black on h1, P and the carousel indicators - Added 0.5 opacity

--- a/ecard/Pages/Index.cshtml
+++ b/ecard/Pages/Index.cshtml
@@ -28,10 +28,10 @@
             <li data-target="#myCarousel" data-slide-to="4"></li>
         </ol>
 
-        <!-- Wrapper for slides -->
+        <!-- Wrapper for slides 15000milliseconds = 15 seconds ...8000milliseconds = 8sec-->
 
         <div class="carousel-inner">
-            <div class="item active">
+            <div class="item active" data-interval ="20000"> 
                 <div style="text-align: center">
                     <a href="https://en.wikipedia.org/wiki/Kitty" target="_blank"><img src="~/images/dj-quik-pic-1-1024x768.jpg" alt="kitty3" /></a>
                     <div class="carousel-caption">
@@ -41,17 +41,17 @@
                 </div>
             </div>
 
-            <div class="item">
+            <div class="item" data-interval ="15000">
                 <div style="text-align: center">
                     <a href="https://www.youtube.com/watch?v=92vTUFqy3gU" target="_blank"><img src="~/images/Quik_Debarge.jpg" alt="kitty3" /> </a>
                     <div class="carousel-caption">
-                        <h1>Quik & Legendary Debarge</h1>
+                        <h1>Quik & The Legendary Debarge</h1>
                         <p>Smile!</p>
                     </div>
                 </div>
             </div>
 
-            <div class="item">
+            <div class="item" data-interval ="15000">
                 <div style="text-align: center">
                     <a href="http://catyearschart.com/" target="_blank"><img src="~/images/quiklive.jpg" alt="kitty3" /> </a>
                     <div class="carousel-caption">
@@ -62,7 +62,7 @@
             </div>
 
 
-            <div class="item">
+            <div class="item" data-interval ="15000">
                 <div style="text-align: center">
                     <a href="https://en.wikipedia.org/wiki/Kitty" target="_blank"><img src="~/images/quikredT.jpg" alt="kitty3" /> </a>
                     <div class="carousel-caption">
@@ -72,7 +72,7 @@
                 </div>
             </div>
 
-            <div class="item">
+            <div class="item" data-interval ="15000">
                 <div style="text-align: center">
                     <a href="https://www.youtube.com/watch?v=92vTUFqy3gU" target="_blank"><img src="~/images/QuikwhiteT.JPG" alt="kitty3" /> </a>
                     <div class="carousel-caption">
