put all of the tags under the carousel div, got rid of the line breaks

--- a/ecard/Pages/Index.cshtml
+++ b/ecard/Pages/Index.cshtml
@@ -35,8 +35,8 @@
                 <div style="text-align: center">
                     <a href="https://en.wikipedia.org/wiki/Kitty" target="_blank"><img src="~/images/dj-quik-pic-1-1024x768.jpg" alt="kitty3" /></a>
                     <div class="carousel-caption">
-                        <h1>DJ Quik</h1>
-                        <p>Happy Birthday! January 18th is a special day!</p>
+                        <h1>Happy Birthday DJ Quik!</h1>
+                        <p> January 18th is a special day!</p>
                     </div>
                 </div>
             </div>
