--- a/ecard/wwwroot/css/site.css
+++ b/ecard/wwwroot/css/site.css
@@ -30,8 +30,8 @@ a {
 
 
 h1 {
-    color: #fff;
-    background: #000;
+    /*color: #fff;
+    background: #000;*/
 }
 
 h2 {
@@ -40,9 +40,9 @@ h2 {
 
 
 p {
-    color: #fff; /*white*/
+    /*color: #fff;*/ /*white*/
         /*#990012; dark shade of red*/
-    background: #000000; /*black*/
+    /*background: #000000;*/ /*black*/
 }
 
 .images{
@@ -55,8 +55,10 @@ p {
 }
 .carousel-caption{
     opacity: 0.5;
+    color: #fff;
+    background: #000;
 }
-.carousel-indicators {
+/*.carousel-indicators {
     opacity: 0.5;
     background: #000000; /*black*/
-}
+}*/
