--- a/ecard/Pages/Index.cshtml
+++ b/ecard/Pages/Index.cshtml
@@ -17,88 +17,89 @@
 </head>
 
 <body>
+    @*<div class="balloons">*@
 
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-            <li data-target="#myCarousel" data-slide-to="3"></li>
-            <li data-target="#myCarousel" data-slide-to="4"></li>
-        </ol>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="3"></li>
+                <li data-target="#myCarousel" data-slide-to="4"></li>
+            </ol>
 
-        <!-- Wrapper for slides 15000milliseconds = 15 seconds ...8000milliseconds = 8sec-->
+            <!-- Wrapper for slides 15000milliseconds = 15 seconds ...8000milliseconds = 8sec-->
 
-        <div class="carousel-inner">
-            <div class="item active" data-interval ="20000"> 
-                <div style="text-align: center">
-                    <a href="https://en.wikipedia.org/wiki/Kitty" target="_blank"><img src="~/images/dj-quik-pic-1-1024x768.jpg" alt="kitty3" /></a>
-                    <div class="carousel-caption">
-                        <h1>Happy Birthday DJ Quik!</h1>
-                        <p> January 18th is a special day!</p>
+            <div class="carousel-inner">
+                <div class="item active" data-interval="20000">
+                    <div style="text-align: center">
+                        <a href="https://en.wikipedia.org/wiki/Kitty" target="_blank"><img src="~/images/dj-quik-pic-1-1024x768.jpg" alt="kitty3" /></a>
+                        <div class="carousel-caption">
+                            <h1>Happy Birthday DJ Quik!</h1>
+                            <p> January 18th is a special day!</p>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="item" data-interval ="15000">
-                <div style="text-align: center">
-                    <a href="https://www.youtube.com/watch?v=92vTUFqy3gU" target="_blank"><img src="~/images/Quik_Debarge.jpg" alt="kitty3" /> </a>
-                    <div class="carousel-caption">
-                        <h1>Quik & The Legendary Debarge</h1>
-                        <p>Smile!</p>
+                <div class="item" data-interval="15000">
+                    <div style="text-align: center">
+                        <a href="https://www.youtube.com/watch?v=92vTUFqy3gU" target="_blank"><img src="~/images/Quik_Debarge.jpg" alt="kitty3" /> </a>
+                        <div class="carousel-caption">
+                            <h1>Quik & The Legendary Debarge</h1>
+                            <p>Smile!</p>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="item" data-interval ="15000">
-                <div style="text-align: center">
-                    <a href="http://catyearschart.com/" target="_blank"><img src="~/images/quiklive.jpg" alt="kitty3" /> </a>
-                    <div class="carousel-caption">
-                        <h1>DJ Quik on the mic!</h1>
-                        <p>Listen closely!</p>
+                <div class="item" data-interval="15000">
+                    <div style="text-align: center">
+                        <a href="http://catyearschart.com/" target="_blank"><img src="~/images/quiklive.jpg" alt="kitty3" /> </a>
+                        <div class="carousel-caption">
+                            <h1>DJ Quik on the mic!</h1>
+                            <p>Listen closely!</p>
+                        </div>
                     </div>
                 </div>
-            </div>
 
 
-            <div class="item" data-interval ="15000">
-                <div style="text-align: center">
-                    <a href="https://en.wikipedia.org/wiki/Kitty" target="_blank"><img src="~/images/quikredT.jpg" alt="kitty3" /> </a>
-                    <div class="carousel-caption">
-                        <h1>Bottles Up!</h1>
-                        <p>Drink Up!</p>
+                <div class="item" data-interval="15000">
+                    <div style="text-align: center">
+                        <a href="https://en.wikipedia.org/wiki/Kitty" target="_blank"><img src="~/images/quikredT.jpg" alt="kitty3" /> </a>
+                        <div class="carousel-caption">
+                            <h1>Bottles Up!</h1>
+                            <p>Drink Up!</p>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="item" data-interval ="15000">
-                <div style="text-align: center">
-                    <a href="https://www.youtube.com/watch?v=92vTUFqy3gU" target="_blank"><img src="~/images/QuikwhiteT.JPG" alt="kitty3" /> </a>
-                    <div class="carousel-caption">
-                        <h1>Quik is the name</h1>
-                        <p>CRISPY WHITE T!</p>
+                <div class="item" data-interval="15000">
+                    <div style="text-align: center">
+                        <a href="https://www.youtube.com/watch?v=92vTUFqy3gU" target="_blank"><img src="~/images/QuikwhiteT.JPG" alt="kitty3" /> </a>
+                        <div class="carousel-caption">
+                            <h1>Quik is the name</h1>
+                            <p>CRISPY WHITE T!</p>
+                        </div>
                     </div>
                 </div>
+
+
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
 
+            <script src="~/lib/jquery/dist/jquery.js"></script>
+            <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
 
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-                <span class="sr-only">Next</span>
-            </a>
         </div>
-
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-
-    </div>
-
+    @*</div>*@
 </body>
 
 
