--- a/ecard/wwwroot/css/site.css
+++ b/ecard/wwwroot/css/site.css
@@ -4,7 +4,7 @@ body {
     /*background-image: url('../images/tile.jpg');*/
     /*background-size: contain;*/
     font-family: Arial;
-    font-size: 16px
+    font-size: 22px
     /*background: #0771e8a url('../images/tile.jpg'); no-repeat top center;*/
 }
 
@@ -53,12 +53,125 @@ p {
     width: 70%;
     margin: auto;
 }
-.carousel-caption{
+.carousel-caption {
     opacity: 0.5;
     color: #fff;
     background: #000;
+  
 }
 /*.carousel-indicators {
     opacity: 0.5;
     background: #000000; /*black*/
+/*}*/
+/*// START CSS BALLOONS       https://codepen.io/giuliacardieri/pen/azERrp?page=4        */
+/* Sass Arrays and Mixins */
+/*$colors: #C2428A, #9045B5, #457BB5, #C43342, #714BBD; @mixin browsers($info) {
+    animation: $info;
+    -webkit-animation: $info;
+    -moz-animation: $info;
+    -ms-animation: $info;
+    -o-animation: $info;
+}
+
+body {
+    background-color: #ddd;
+}
+
+.balloons {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+
+.balloon {
+    border-radius: 50% 50% 50% 50% / 40% 40% 60% 60%;
+    display: block;
+    height: 100px;
+    opacity: 0.8;
+    position: absolute;
+    width: 80px;
+    &:after
+
+{
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    bottom: -5px;
+    content: "";
+    height: 0;
+    left: 45%;
+    position: absolute;
+    width: 0;
+}
+
+}
+
+@for $i from 0 through 99 {
+    $the-color: nth($colors, random(length($colors)));
+
+    .balloon# {
+        $i
+    }
+
+{
+    $speed: random(20) + 7 + s;
+    $delay: - (random(50) + 50 + s);
+    background-color: $the-color;
+    left: random(99) + 0%;
+    @include browsers(flyingBalloon $speed $delay linear infinite);
+    &:after
+
+{
+    border-bottom: 10px solid $the-color;
+}
+
+}
+}
+@-webkit-keyframes flyingBalloon {
+    from {
+        bottom: -20%;
+    }
+
+    to {
+        bottom: 110%;
+    }
+}
+
+@-moz-keyframes flyingBalloon {
+    from {
+        bottom: -20%;
+    }
+
+    to {
+        bottom: 110%;
+    }
+}
+
+@-ms-keyframes flyingBalloon {
+    from {
+        bottom: -20%;
+    }
+
+    to {
+        bottom: 110%;
+    }
+}
+
+@-o-keyframes flyingBalloon {
+    from {
+        bottom: -20%;
+    }
+
+    to {
+        bottom: 110%;
+    }
+}
+
+@keyframes flyingBalloon {
+    from {
+        bottom: -20%;
+    }
+
+    to {
+        bottom: 110%;
+    }
 }*/
