- Updated Alt text - Updated links to Quik pages

--- a/ecard/Pages/Index.cshtml
+++ b/ecard/Pages/Index.cshtml
@@ -32,9 +32,9 @@
             <!-- Wrapper for slides 15000milliseconds = 15 seconds ...8000milliseconds = 8sec-->
 
             <div class="carousel-inner">
-                <div class="item active" data-interval="20000">
+                <div class="item active" data-interval="40000">
                     <div style="text-align: center">
-                        <a href="https://en.wikipedia.org/wiki/Kitty" target="_blank"><img src="~/images/dj-quik-pic-1-1024x768.jpg" alt="kitty3" /></a>
+                        <a href="http://www.imdb.com/name/nm0703558/" target="_blank"><img src="~/images/dj-quik-pic-1-1024x768.jpg" alt="Pic of DJ Quik" /></a>
                         <div class="carousel-caption">
                             <h1>Happy Birthday DJ Quik!</h1>
                             <p> January 18th is a special day!</p>
@@ -42,9 +42,9 @@
                     </div>
                 </div>
 
-                <div class="item" data-interval="15000">
+                <div class="item" data-interval="40000">
                     <div style="text-align: center">
-                        <a href="https://www.youtube.com/watch?v=92vTUFqy3gU" target="_blank"><img src="~/images/Quik_Debarge.jpg" alt="kitty3" /> </a>
+                        <a href="https://www.youtube.com/watch?v=scavDac7d1s" target="_blank"><img src="~/images/Quik_Debarge.jpg" alt="Pic of Quik & The Legendary Debarge" /> </a>
                         <div class="carousel-caption">
                             <h1>Quik & The Legendary Debarge</h1>
                             <p>Smile!</p>
@@ -52,9 +52,9 @@
                     </div>
                 </div>
 
-                <div class="item" data-interval="15000">
+                <div class="item" data-interval="40000">
                     <div style="text-align: center">
-                        <a href="http://catyearschart.com/" target="_blank"><img src="~/images/quiklive.jpg" alt="kitty3" /> </a>
+                        <a href="https://www.instagram.com/djquik/?hl=en" target="_blank"><img src="~/images/quiklive.jpg" alt="Pic of Quik on the mic live" /> </a>
                         <div class="carousel-caption">
                             <h1>DJ Quik on the mic!</h1>
                             <p>Listen closely!</p>
@@ -63,19 +63,19 @@
                 </div>
 
 
-                <div class="item" data-interval="15000">
+                <div class="item" data-interval="40000">
                     <div style="text-align: center">
-                        <a href="https://en.wikipedia.org/wiki/Kitty" target="_blank"><img src="~/images/quikredT.jpg" alt="kitty3" /> </a>
+                        <a href="https://twitter.com/djquik?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><img src="~/images/quikredT.jpg" alt="Pic of Quik on stage with crew" /> </a>
                         <div class="carousel-caption">
                             <h1>Bottles Up!</h1>
-                            <p>Drink Up!</p>
+                            <p>Get your glasses ready!</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="item" data-interval="15000">
                     <div style="text-align: center">
-                        <a href="https://www.youtube.com/watch?v=92vTUFqy3gU" target="_blank"><img src="~/images/QuikwhiteT.JPG" alt="kitty3" /> </a>
+                        <a href="https://www.youtube.com/watch?v=g6e29y6ApLs" target="_blank"><img src="~/images/QuikwhiteT.JPG" alt="T- Shirt of Born & Raised in Compton " /> </a>
                         <div class="carousel-caption">
                             <h1>Quik is the name</h1>
                             <p>CRISPY WHITE T!</p>
