--- a/ecard/Pages/Index.cshtml
+++ b/ecard/Pages/Index.cshtml
@@ -17,7 +17,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-8">
                 <!--Carousel START -->
                 <div id="myCarousel" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
@@ -82,7 +82,7 @@
                 <!-- Carousel END -->
             </div>
 
-            <div class="col-sm-6">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                 <h1>Select a e-Greeting to send to your Friend</h1>
                 <!--GRID START -->
                 <div class="row">
