container : row 1 = 6 col row 2 = 4 col
container-fluid :
row 3 = 1 col

--- a/ecard/Pages/Challenge.cshtml
+++ b/ecard/Pages/Challenge.cshtml
@@ -16,20 +16,56 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-2">
 
             </div>
 
-            <div class="col-sm-4">
+            <div class="col-sm-2">
 
             </div>
 
-            <div class="col-sm-4">
+            <div class="col-sm-2">
+
+            </div>
+            <div class="col-sm-2">
+
+            </div>
+            <div class="col-sm-2">
+
+            </div>
+            <div class="col-sm-2">
 
             </div>
         </div>
-    </div>
 
+        <div class="row">
+            <div class="col-sm-3">
+
+            </div>
+
+            <div class="col-sm-3">
+
+            </div>
+
+            <div class="col-sm-3">
+
+            </div>
+
+            <div class="col-sm-3">
+
+            </div>
+
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-12">
+
+                </div>
+            </div>
+        </div>
+
+
+    </div>
 
 
     <script src="~/lib/jquery/dist/jquery.js"></script>
