removed / commented out my css on my challenge page

--- a/ecard/wwwroot/css/site.css
+++ b/ecard/wwwroot/css/site.css
@@ -30,7 +30,7 @@ a {
     padding-top: 3em;
 }
 .row{
-    padding:;
+    margin: 1em;
 }
 
 /*BOOTSTRAP OVERIDES****************************************************************************************/
