--- a/ecard/Pages/Challenge.cshtml
+++ b/ecard/Pages/Challenge.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model IndexModel
+@model ChallengeModel
 @{
     ViewData["Title"] = "Home page";
 }
@@ -9,7 +9,7 @@
 <head>
     <title>My eCard</title>
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
-    <link href="~/css/site.css" rel="stylesheet" />
+    <!--  <link href="~/css/site.css" rel="stylesheet" />-->
 
 </head>
 
@@ -17,7 +17,22 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12">
-
+                @*Navbar Start*@
+                <nav class="navbar navbar-default">
+                    <div class="container-fluid">
+                        <div class="navbar-header">
+                            <a class="navbar-brand" href="#">WebSiteName</a>
+                        </div>
+                        <ul class="nav navbar-nav">
+                            <li class="active"><a href="#">Home</a></li>
+                            <li><a href="#">Page 1</a></li>
+                            <li><a href="#">Page 2</a></li>
+                            <li><a href="#">Page 3</a></li>
+                        </ul>
+                    </div>
+                </nav>
+                ...
+                @*Navbar End*@
             </div>
         </div>
     </div>
@@ -25,12 +40,86 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-8">
+                <!--Carousel START -->
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                        <li data-target="#myCarousel" data-slide-to="3"></li>
+                        <li data-target="#myCarousel" data-slide-to="4"></li>
+                        <li data-target="#myCarousel" data-slide-to="5"></li>
+                        <li data-target="#myCarousel" data-slide-to="6"></li>
+                    </ol>
 
+                    <!-- Wrapper for slides 15000milliseconds = 15 seconds ...8000milliseconds = 8sec-->
+
+                    <div class="carousel-inner">
+                        <div class="item active" data-interval="800000">
+                            <a href="" target="_blank"><img src="~/images/card_anniversary.png" class="image-responsive center-block " alt="Anniversary frame" /></a>
+                        </div>
+
+                        <div class="item" data-interval="800000">
+                            <a href="" target="_blank"><img src="~/images/card_babyshower.png" class="image-responsive center-block" alt="babyshower frame" /></a>
+                        </div>
+
+
+                        <div class="item" data-interval="800000">
+                            <a href="" target="_blank"><img src="~/images/card_birthday.png" class="image-responsive center-block " alt="birthday frame" /></a>
+                        </div>
+
+
+                        <div class="item" data-interval="800000">
+                            <a href="" target="_blank"><img src="~/images/card_frame_black.png" class="image-responsive center-block" alt="Black frame" /></a>
+                        </div>
+
+
+                        <div class="item" data-interval="800000">
+                            <a href="" target="_blank"><img src="~/images/card_frame_gold.png" class="image-responsive center-block" alt="Gold Frame " /> </a>
+                        </div>
+
+                        <div class="item" data-interval="800000">
+                            <a href="" target="_blank"><img src="~/images/card_frame_wood.png" class="image-responsive center-block " alt="Wood Frame " /> </a>
+                        </div>
+
+
+                        <div class="item" data-interval="800000">
+                            <a href="" target="_blank"><img src="~/images/card_valentines.png" class="image-responsive center-block " alt="Valentines Frame" /> </a>
+                        </div>
+
+                        <!-- Left and right controls -->
+                        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+
+
+                </div>
+                <!-- Carousel END -->
             </div>
-
+            <!--Text START -->
             <div class="col-sm-4">
 
+                <p> Kitten Rescue is a non-profit, volunteer-run organization devoted to finding loving homes for unwanted, homeless cats and kittens. We rescue cats and kittens from the streets of Los Angeles and from City Shelter euthanasia. Since our start in 1997, we have grown into one of the largest, most well-respected animal welfare groups in LA.</p>
+
+
+
+                <p> Kitten Rescue volunteers adopt out over 1,000 cats and kittens into homes every year. Since we began, we have rescued and placed over 17,000 cats into loving homes. Thousands more have been helped through our volunteer-fueled education and outreach programs.</p>
+
+
+
+                <p> We educate the public about responsible pet guardianship, how to care for kittens and cats, and the importance of spaying and neutering. Kitten Rescue makes educational material available via events, print, school presentations and here on our website. We also provide Trap-Neuter-Return (TNR) assistance for communities in and around Los Angeles, and teach people how to manage and care for feral cat colonies.</p>
+
+
+
             </div>
+            <!--Text END-->
         </div>
 
         <div class="row">
@@ -45,28 +134,42 @@
             <div class="col-sm-4">
 
             </div>
-
         </div>
+
         <div class="row">
             <div class="col-sm-4">
 
             </div>
-
             <div class="col-sm-8">
 
             </div>
-
         </div>
-
     </div>
 
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12">
-
+                @*Navbar Start*@
+                <nav class="navbar navbar-default">
+                    <div class="container-fluid">
+                        <div class="navbar-header">
+                            <a class="navbar-brand" href="#">WebSiteName</a>
+                        </div>
+                        <ul class="nav navbar-nav">
+                            <li class="active"><a href="#">Home</a></li>
+                            <li><a href="#">Page 1</a></li>
+                            <li><a href="#">Page 2</a></li>
+                            <li><a href="#">Page 3</a></li>
+                        </ul>
+                    </div>
+                </nav>
+                ...
+                @*Navbar End*@
             </div>
         </div>
     </div>
+
+
 
 
 
