--- a/ecard/Pages/Bootstrap4.cshtml
+++ b/ecard/Pages/Bootstrap4.cshtml
@@ -10,9 +10,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
 </head>
 <body>
     <div class="container">
+        <!--flexbox -->
         <h1>Hello, world!</h1>
         <div class="d-flex flex-column-reverse">
             <div class="p-3 bg-danger">
@@ -22,22 +24,41 @@
                 2
             </div>
             <div class="p-3 bg-dark">
-                3
+                <i class="fa fa-battery fa-2x"></i>
             </div>
         </div>
     </div>
+    <!-- Bootstrap col  -->
     <div class="row">
-        <div class="col bg-danger">
+        <div class="col p-3 bg-danger">
             1
         </div>
-        <div class=" col bg-purple">
+        <div class=" col  p-3 bg-purple">
             2
         </div>
-        <div class=" col bg-primary">
+        <div class=" col  p-3 bg-primary">
             3
         </div>
     </div>
 
+    <!-- Bootstap Card -->
+    <div class="container">
+        <div class="card">
+            <div class="card-header">
+                Mobile <i class="fa fa-wifi fa-pull-right"></i><i class="fa fa-battery fa-pull-right"></i>
+            </div>
+            <div class="card-body">
+                <div class="d-flex">
+                    <i class="col fa fa-facebook fa-2x"></i>
+                    <i class="col fa fa-twitter fa-2x"></i>
+                    <i class="col fa fa-instagram fa-2x"></i>
+                </div>
+            </div>
+            <div class="card-footer">
+                <i class="fa fa-phone fa-2x"></i><i class="fa fa-camera fa-2x fa-2x fa-pull-right"></i>
+            </div>
+        </div>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="~/lib/jquery/dist/jquery.js"></script>
