--- a/ecard/Pages/Forms.cshtml
+++ b/ecard/Pages/Forms.cshtml
@@ -1,5 +1,55 @@
 ﻿@page
 @model FormsModel
-@{
-    ViewData["Title"] = "Forms";
-}
+@*{
+        ViewBag.meta_title= "Form";
+        ViewBag.meta_keywords= "";
+        ViewBag.meta_desc= "";
+        ViewBag.meta_theme= "birthday";
+    }*@
+<div class="container">
+    <form method="post">
+        <div class="form-group">
+            <label asp-for="@Model._myGreetings.friendsName">Friends Name</label>
+            <input asp-for="@Model._myGreetings.friendsName" type="text" class="form-control">
+            <span asp-validation-for="@Model._myGreetings.friendsName" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="@Model._myGreetings.friendsEmail">Email address</label>
+            <input asp-for="@Model._myGreetings.friendsEmail" type="email" class="form-control">
+            <span asp-validation-for="@Model._myGreetings.friendsEmail" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="@Model._myGreetings.subject">Subject</label>
+            <input asp-for="@Model._myGreetings.subject" type="text" class="form-control">
+            <span asp-validation-for="@Model._myGreetings.subject" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="@Model._myGreetings.message">Message</label>
+            <textarea asp-for="@Model._myGreetings.message" class="form-control"></textarea>
+            <div class="countdown"></div>
+        </div>
+        <div class="form-group">
+            <label asp-for="@Model._myGreetings.yourName">Your Name</label>
+            <input asp-for="@Model._myGreetings.yourName" type="text" class="form-control">
+            <span asp-validation-for="@Model._myGreetings.yourName" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="@Model._myGreetings.yourEmail">Email address</label>
+            <input asp-for="@Model._myGreetings.yourEmail" type="email" class="form-control">
+            <span asp-validation-for="@Model._myGreetings.yourEmail" class="text-danger"></span>
+        </div>
+        @*recaptcha start*@
+        <div class="g-recaptcha" data-sitekey="6Le5_S0UAAAAANukdP7UkKR2isiirPXw7DPcZwCb"></div>
+        @*recaptcha end*@
+        <div class="button">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+    </form>
+</div>
+@section scripts{
+    <script src="~/lib/textarea-autosize/dist/jquery.textarea_autosize.js"></script>
+    <script>
+        $('textarea').textareaAutoSize();
+    </script>
+    <script src="~/lib/textareacountdown.js"></script>
+    <script src='https://www.google.com/recaptcha/api.js'></script>}
